@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - rpm.org: rpmhash.c: use size_t for keySize.
     - rpm.org: remove unnecessary rpmShowProgress() prototype.
     - jbj: add all-mode --macrosused option, debug rpmGetMacroEntries().
     - jbj: access all tag data integers as "unsigned", using <stdint.h> types.
